--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Arial
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
